BuildFile: Add EnableCompilePreview property and support BuildFileTool: Add EnableCompilePreview UI and support SnapCompiler, RunApp, RunToolUtils: Add support for BuildFile.EnablCompilePreview